# Pattern-Recognition-and-Computer-Vision

./: README.md
Real-time 2-D Object Recognition/: CMakeLists.txt  Readme.md  trial.csv
Recognition using Deep Networks/results/: model.pth  optimizer.pth
Video-special-effects./: Time_blur.cpp
